# llama-vortex

./: ggml-CMakeLists.txt  ggml-backend-reg.cpp  ggml-src-CMakeLists.txt  ggml-vortex.h  readme.md
ggml-vortex/: CMakeLists.txt  ggml-vortex.cpp
